--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div> 
             <div class="form-group">
               <label for="phoneNumber">Phone Number</label>
-              <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
+              <input type="text" class="form-control" id="phone" placeholder="Phone Number">
             </div>
             <div class="form-group">
               <label for="street">Street</label>
